# FastQuantBacktester

./: .env.example  .gitignore  CMakeLists.txt  FastQuantBacktester_PRD.md  README.md  run.bat  run.sh
.github/instructions/: FastQuantBackTester.instructions.md
.github/workflows/: ci.yml
examples/: api_example.config.json  fastquant.config.json  sample_noheader.csv  sample_prices.csv
frontend/: api.js  index.html  main.js  style.css
src/App/: EnvLoader.cpp  EnvLoader.h  RunConfig.cpp  RunConfig.h
src/BacktestEngine/: BacktestEngine.cpp  BacktestEngine.h
src/DataLoader/: APIDataLoader.cpp  APIDataLoader.h  CSVDataLoader.cpp  CSVDataLoader.h  Candle.h  TimestampParser.h
src/Model/: Order.h  Portfolio.cpp  Portfolio.h  Trade.h
src/Reporter/: Reporter.cpp  Reporter.h
src/Server/: main.cpp
src/Strategy/: BreakoutStrategy.cpp  BreakoutStrategy.h  MovingAverageStrategy.cpp  MovingAverageStrategy.h  Strategy.h
src/cli/: main.cpp
tests/: bench_csv_perf.cpp  test_api_loader.cpp  test_breakout_strategy.cpp  test_cli_config.cpp  test_csv_earlystop.cpp  test_csv_loader.cpp  test_csv_noheader.cpp  test_csv_stream.cpp  test_csv_strict.cpp  test_engine_integration.cpp  test_epoch_ms.cpp  test_execution_model.cpp  test_moving_average.cpp  test_portfolio.cpp  test_reporter.cpp
